# Course_work

./: pyproject.toml
data/: config.py  operations.xls  report_file.xlsx
src/: logger.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
