[tool.poetry]
name = "course-work-beta"
version = "0.1.0"
description = ""
authors = ["Svyatoslav Deinekin <svyadey@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
xlrd = "^2.0.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
